2008-08-06  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Changed URL to http://www.psrregshuffle.de
 * Reengineered class finder algorithm to work with system-wide installed
   version, too and to be easier to understand.


2008-07-17  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Equiped all modules with global __all__ list which contains all publicly
   exported symbol names.
 * Refactored algorithm for finding subclasses of RegBank and Registrations.
   Now contained in ClassFinder which also makes use of caching.
 * Implmented sub-class lookup for classes RegBank and Registration.
 * Renamed modules named "exceptions" due to naming conflict with Python's
   standard library.
 * Merged module regbank.models with const.
 * Created and implemented BankFile_PSR2000 class for accessing registration
   banks of the Yamaha PSR-2000 keyboard.
 * Created and implemented Registration_PSR2000 class for accessing and
   manipulating registration data of the Yamaha PSR-2000 keyboard.
 * Implemented RegFile class for storing single registrations to disc.
 * Importing registrations now works.
 * New class EasyDragAndDrop to simplify drag and drop implementation for
   "new registration bank" panel.
 * Implemented complete panel "New Registrtion Bank". Thus the application
   has reached it's full planed feature set.


2008-07-16  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Wrote script for quick running of all available tests.
 * Defined API for bank files. (Class regbank.bankfile.BankFile)
 * Defined API for editing registrations (Class regbank.registration.Registration)
 * Defined API for registration files (Class regfile.regfile.RegFile)
 * Introduced constants for keyboard models (regbank.models)
 * Introduced main window class.
 * Introduced classes for coordinating the import of registrations and the
   assembly of bank files. For this certain signals from the main window are
   delegated to the coordinator objects.